...
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="Class Manager"
                app:titleTextColor="@android:color/white"
                app:contentInsetStartWithNavigation="0dp"
                android:paddingEnd="8dp"
                app:navigationContentDescription="Ouvrir le menu">
                >

                <!-- PROFIL ÉTUDIANT COMPACT -->
                <LinearLayout
                    android:id="@+id/profileCompact"
                    android:layout_width="wrap_content"
...
